# sqlstratum

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTES.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docker/: compose.yml
docs/: changelog.md  debugging.md  dialect-wrappers.md  getting-started.md  hydration.md  index.md  roadmap.md  sql-profile.md  testing.md
docs/overrides/: main.html
docs/overrides/partials/: copyright.html
docs/stylesheets/: extra.css
examples/: sqlite_demo.py
sqlstratum/: __init__.py  ast.py  compile.py  connection_url.py  dialect_binding.py  dsl.py  errors.py  expr.py  hydrate.py  meta.py  mysql.py  runner.py  runner_mysql.py  runner_mysql_async.py  sqlite.py  types.py
sqlstratum/dialects/: __init__.py  registry.py  types.py
sqlstratum/dialects/mysql/: __init__.py  compiler.py
sqlstratum/dialects/sqlite/: __init__.py  compiler.py
sqlstratum/hydrate/: __init__.py  pydantic.py
tests/: test_compile_aggregate.py  test_compile_determinism.py  test_compile_dml.py  test_compile_join.py  test_compile_mysql.py  test_compile_predicates.py  test_compile_predicates_edge.py  test_compile_select.py  test_compile_setops.py  test_compile_setops_edge.py  test_connection_options.py  test_connection_url_parsing.py  test_dialect_capabilities_contract.py  test_dialect_wrapper_interactions.py  test_hydration.py  test_mysql_integration_real.py  test_mysql_wrapper.py  test_ordering_builder.py  test_pydantic_hydration.py  test_runner_debug_logging.py  test_runner_mysql.py  test_runner_mysql_async.py  test_runner_set_query_hydration.py  test_sqlite_integration.py  test_sqlite_integration_new_features.py  test_sqlite_wrapper.py  test_transactions.py
