[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlstratum"
version = "0.2.0"
description = "Lightweight, source-first SQL AST + compiler + runner."
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [
  { name = "Antonio Ognio", email = "aognio@gmail.com" },
]
keywords = ["sql", "query-builder", "sqlite", "compiler", "ast"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/aognio/sqlstratum"
Repository = "https://github.com/aognio/sqlstratum"
Issues = "https://github.com/aognio/sqlstratum/issues"

[project.optional-dependencies]
dev = [
  "build>=1.2.0",
  "poethepoet>=0.30.0",
  "twine>=5.0.0",
]
pydantic = [
  "pydantic>=2",
]

[tool.setuptools]
packages = ["sqlstratum", "sqlstratum.hydrate"]

[tool.poe.tasks]
release-build.cmd = "python -m build --no-isolation"
release-check.cmd = "python -m twine check dist/*"
release-upload.cmd = "python -m twine upload dist/*"
release.sequence = ["release-build", "release-check", "release-upload"]
